--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <!-- TeleOp Widget -->
     <div class="widget" id="TeleOp-Widget">
-      <h2>teleop</h2>
+      <h2>TeleOp</h2>
       <div class="mini-box">
         <h3>AMP SCORED</h3>
         <button type="button" onclick="updateButtonNum('tampScored', -1)">-</button>
